--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@hapi/joi": "^17.1.1",
+    "@hapi/hapi": "^21.3.2",
+    "auto-bind": "^4.0.0",
     "dotenv": "^16.3.1",
     "joi": "^17.11.0",
     "nanoid": "^3.3.7",
     "node-pg-migrate": "^6.2.2",
-    "pg": "^8.11.3"
+    "pg": "^8.11.3",
+    "readdirp": "^3.6.0"
   },
   "devDependencies": {
     "eslint": "^8.56.0",
